--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,25 @@
-nav>ul>li{
-    display:inline-block;
-    box-shadow: 2px 2px 5px #c0c0c0;
-   
-   
+ .pizza{
+  display:none;
+}
+/* .medium{
+  display: unset;
+ }    */
+ .jumbotron{
+   background-image: url("../images/background.png");  
+   color:white;
+   height: 30px;
  }
- 
- nav{
-   margin-left:60px;
-   
- }
- nav>ul>li>a{
- padding: 60px;
- text-decoration: none;
- margin:auto;
- }
+.home_content{
+display: flex;
+flex-direction: row;
+justify-content:space-between;
+}
+h1{
+  text-align: center;
+}
+.footer{
+  text-align:center;
+  border:0px solid black;
+  background-color: black;
+  color: white;
+}
