--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
  .pizza{
   display:none;
 }
-/* .medium{
-  display: unset;
- }    */
+.delivary{
+  display: none;
+ }   
  .jumbotron{
    background-image: url("../images/background.png");  
    color:white;
@@ -17,6 +17,10 @@ justify-content:space-between;
 h1{
   text-align: center;
 }
+/* .summary{
+  float: right;
+  padding-bottom: 100px;
+} */
 .footer{
   text-align:center;
   border:0px solid black;
