--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,7 @@
- .pizza{
+/* body{
+  height:2000px;
+} */
+.pizza{
   display:none;
 }
 .delivary{
@@ -26,4 +29,5 @@ h1{
   border:0px solid black;
   background-color: black;
   color: white;
+  margin-top: 100px;
 }
